--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    color: #333;
+    color: #0F0F0F;
     background: #222;
     position: relative;
     text-align: center;
