--- a/src/views/sections/home/home.html
+++ b/src/views/sections/home/home.html
@@ -1,5 +1,5 @@
 <div class="home">
     <ul>
-        <li v-repeat="project:projects" v-component="nameButton" v-with="project"></li>
+        <li v-repeat="project:projects" v-el="links" v-component="nameButton" v-with="project"></li>
     </ul>
 </div>
