--- a/src/views/layout/header/header.html
+++ b/src/views/layout/header/header.html
@@ -1,2 +1,2 @@
-<h2>CRMA 2015</h2>
-<h3 id="subtitle">Creative Coding Workshop - Three.js</h3>
+<h2 v-el="title">CRMA 2015</h2>
+<h3 id="subtitle" v-el="subtitle">Creative Coding Workshop - Three.js</h3>
