Changed the logo and added some margins around

--- a/src/views/layout/header/header.html
+++ b/src/views/layout/header/header.html
@@ -1,2 +1,2 @@
-<h2 v-el="title">CRMA 2015</h2>
-<h3 id="subtitle" v-el="subtitle">Creative Coding Workshop - Three.js</h3>
+<img v-el="logo" src="assets/images/logo.svg" width="240" />
+<h2 id="subtitle" v-el="subtitle">Creative Coding Workshop - Three.js</h2>
