--- a/src/views/layout/header/_header.scss
+++ b/src/views/layout/header/_header.scss
@@ -1,18 +1,13 @@
 header {
     padding-top: 50px;
-    
-    h2 {
-        text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8), 0px -1px 1px #51d0ff;
-        text-transform: uppercase;
-        font-size: 50px;
+
+    img {
         margin-bottom: 20px;
-        font-weight: bold;
-        color: #007dac;
     }
 
-    h3 {
+    h2 {
         color: #555;
-        font-size: 23px;
+        font-size: 20px;
         margin-bottom: 40px;
         font-weight: 100;
     }
