--- a/src/views/sections/project/project.html
+++ b/src/views/sections/project/project.html
@@ -1,3 +1,3 @@
 <div class="project">
-    <h2>ici insérer l'iframe de {{author}}</h2>
+    <h2>ici insérer l'iframe de {{project.author}}</h2>
 </div>
