--- a/src/views/layout/header/header.html
+++ b/src/views/layout/header/header.html
@@ -1,2 +1,3 @@
-<a href="/"><img v-el="logo" src="assets/images/logo.svg" width="240" /></a>
-<h2 id="subtitle" v-el="subtitle">Creative Coding Workshop - Three.js</h2>
+<a href="#" class="btn btn--info js-info-btn">
+	i
+</a>
