--- a/src/views/sections/home/home.html
+++ b/src/views/sections/home/home.html
@@ -1,5 +1,13 @@
 <div class="home">
-    <ul>
-        <li v-repeat="project:projects" v-el="links" v-component="nameButton" v-with="project"></li>
-    </ul>
+	<div class="container">
+		<div class="three">
+			<h1 class="[ home__heading ] [ heading-1 soft-grey lower ]">
+				<span class="white">Gobelins</span>.experiments
+			</h1>
+			<h2 class="[ home__teasing ] [ teasing-1 soft-grey lower ]">
+				<span class="white">Three.js</span> creative coding workshop
+			</h2>
+			<button class="[ home__btn ] [ btn btn--25 btn--no-ap btn--fill btn--white ]">View all projects</button>
+		</div>
+	</div>
 </div>
