--- a/sass/utils/ui/_buttons.scss
+++ b/sass/utils/ui/_buttons.scss
@@ -11,7 +11,7 @@
 
 .btn--no-ap {
 	@include appearance(none);
-	background: none;
+	background: none;	
 	border: none;
 	padding: 0px;
 	margin: 0px;
@@ -30,6 +30,8 @@
 	}
 
 	&:hover {
+		color: $white;
+		
 		&:after {
 			right: 0%;
 		}
