--- a/src/views/sections/home/home.html
+++ b/src/views/sections/home/home.html
@@ -1,13 +1,15 @@
 <div class="home">
 	<div class="container">
-		<div class="three">
-			<h1 class="[ home__heading ] [ heading-1 soft-grey lower ]">
-				<span class="white">Gobelins</span>.experiments
-			</h1>
-			<h2 class="[ home__teasing ] [ teasing-1 soft-grey lower ]">
-				<span class="white">Three.js</span> creative coding workshop
-			</h2>
-			<button class="[ home__btn ] [ btn btn--25 btn--no-ap btn--fill btn--white ]">View all projects</button>
+		<div class="row">
+			<div class="three">
+				<h1 class="[ home__heading ] [ heading-1 soft-grey lower ]">
+					<span class="white">Gobelins</span>.experiments
+				</h1>
+				<h2 class="[ home__teasing ] [ teasing-1 soft-grey lower ]">
+					<span class="white">Three.js</span> creative coding workshop
+				</h2>
+				<a href="projects-list/" class="[ home__btn ] [ btn btn--25 btn--fill btn--white ]">View all projects</a>
+			</div>
 		</div>
 	</div>
 </div>
