--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,7 @@ body {
     // background: $navy-blue;
     // needs latest Compass, add '@import "compass"' to your scss
     @include background-image(radial-gradient(center, ellipse cover, hsla(0, 0, 0, 0) 0%, hsla(0, 0, 0, 0) 50%, hsla(0, 0, 0, 0.25) 100%), url('../assets/images/pattern.png'));
-    
+
 
     position: relative;
     // text-align: center;
@@ -56,7 +56,8 @@ html {
 }
 
 .content-wrapper,
-.home {
+.home,
+.projects-list {
     height: 100%;
 }
 
