--- a/src/views/components/nameButton/_nameButton.scss
+++ b/src/views/components/nameButton/_nameButton.scss
@@ -1,32 +1,31 @@
 .name-button {
     display: block;
-    line-height: 80px;
-    height: 80px;
+    // line-height: 80px;
+    // height: 80px;
     position: relative;
+    padding: 15px 0;
+    @extend %unglitch-3d;
+
+    &:hover {
+        // cursor: pointer;
+    }
 
     .name, .title {
-        display: inline-block;
-        color: #333;
+        display: block;
+        // color: #333;
     }
 
     .name {
-        @extend %font-regular;
+        // @extend %font-regular;
+        font-size: em(21);
+        // margin-bottom: 10px;
     }
 
     .title {
-        @extend %font-light;
-        padding-left: 10px;
+        // @extend %font-light;
+        // padding-left: 10px;
         opacity: 0;
-        color: #FFF;
-    }
-
-    .line {
-        width: 100%;
-        height: 1px;
-        background: #007dac;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        @include transform(scaleX(0));
+        // color: #6c7884;
+        font-size: em(18);
     }
 }
