--- a/src/views/sections/projects-list/_projects-list.scss
+++ b/src/views/sections/projects-list/_projects-list.scss
@@ -3,3 +3,11 @@
     align-items: center;
     justify-content: center;
 }
+
+    .projects-list__heading {
+        margin-bottom: em(25);
+    }
+
+    .projects-list__teasing {
+        margin-bottom: em(17);
+    }
