--- a/src/views/sections/projects-list/projects-list.html
+++ b/src/views/sections/projects-list/projects-list.html
@@ -1,6 +1,16 @@
 <div class="projects-list">
 	<div class="container">
 		<div class="row">
+			<div class="four offset-by-two align-center">
+				<h3 class="[ projects-list__heading ] [ heading-2 soft-grey lower ]">
+					<span class="white">Gobelins</span>.experiments
+				</h3>
+				<h2 class="[ projects-list__teasing ] [ teasing-2 white ]">
+					Developers - CRMA Interactive Design '15
+				</h2>
+			</div>
+		</div>
+		<div class="row">
 	        <div v-repeat="project: projects | limitToRange 0 4" class="column two" v-el="links" v-component="nameButton" v-with="project"></div>
 		</div>
 		<div class="row">
