final glitches aniframe tests, remains perf

--- a/src/views/sections/project/project.html
+++ b/src/views/sections/project/project.html
@@ -1,3 +1,3 @@
 <div class="project">
-    <h2>ici insérer l'iframe de {{project.author}}</h2>
+    <iframe src="/repos/{{project.id}}" frameborder="0"></iframe>
 </div>
