--- a/src/views/components/nameButton/nameButton.html
+++ b/src/views/components/nameButton/nameButton.html
@@ -1,4 +1,4 @@
 <a class="[ name-button ]" href="{{url}}" v-on="mouseover: onMouseOver, mouseout: onMouseOut">
     <div class="[ name ] [ white ]" v-el="name">{{project.author}}</div>
-    <div class="[ title ] [ soft-grey ]" v-el="title">{{project.title}}</div>
+    <div class="[ title ] [ soft-grey ]" v-el="title" style="">{{project.title}}</div>
 </a>
