--- a/src/views/sections/project/_project.scss
+++ b/src/views/sections/project/_project.scss
@@ -1,7 +1,16 @@
 .project {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 30px;
-    h2 {
-        text-transform: uppercase;
-        font-size: 70px;
+    // h2 {
+    //     text-transform: uppercase;
+    //     font-size: 70px;
+    // }
+
+    iframe {
+        display: flex-box;
+        width: 100%;
+        height: 100%;
     }
 }
