added some icons

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -38,6 +38,7 @@
 @import "utils/ui/typography";
 @import "utils/ui/utils";
 @import "utils/ui/others";
+@import "utils/ui/icons";
 
 
 @import "base/base";
