--- a/src/views/layout/footer/_footer.scss
+++ b/src/views/layout/footer/_footer.scss
@@ -1,9 +1,20 @@
 footer {
-    margin: 50px 0 50px 0;
-    font-size: 12px;
+    @include position(absolute, auto 0px 0px 0px);
+    height: 90px;
+    // padding-top: 50px;
 
-    a {
-        display: inline-block;
-        margin: 0 5px;
+    img {
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        color: #555;
+        font-size: 20px;
+        margin-bottom: 40px;
+        font-weight: 100;
+    }
+
+    .btn--info {
+        @include position(absolute, auto 20px 20px auto);
     }
 }
