--- a/src/views/sections/project/_project.scss
+++ b/src/views/sections/project/_project.scss
@@ -2,11 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
-    // h2 {
-    //     text-transform: uppercase;
-    //     font-size: 70px;
-    // }
+    padding: 50px;
 
     iframe {
         display: flex-box;
@@ -14,3 +10,9 @@
         height: 100%;
     }
 }
+
+    .project__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
