--- a/src/views/sections/project/project.html
+++ b/src/views/sections/project/project.html
@@ -1,3 +1,6 @@
 <div class="project">
+    <a href="/projects-list" class="project__close">
+        <i class="icon icon-close"></i>
+    </a>
     <iframe src="/repos/{{project.id}}" frameborder="0"></iframe>
 </div>
