--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,11 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+// %font-regular {
+//     font-weight: 400;
+//     font-family: 'Open Sans', sans-serif;
+// }
 
-%font-regular {
-    font-weight: 400;
-    font-family: 'Open Sans', sans-serif;
-}
-
-%font-light {
-    font-weight: 300;
-    font-family: 'Open Sans', sans-serif;
-}
+// %font-light {
+//     font-weight: 300;
+//     font-family: 'Open Sans', sans-serif;
+// }
