--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -49,6 +49,7 @@
 @import "src/views/sections/home/home";
 @import "src/views/sections/project/project";
 @import "src/views/sections/projects-list/projects-list";
+@import "src/views/sections/about/about";
 
 @import "src/views/layout/footer/footer";
 @import "src/views/layout/header/header";
