--- a/src/views/sections/home/home.html
+++ b/src/views/sections/home/home.html
@@ -2,13 +2,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="three">
-				<h1 class="[ home__heading ] [ heading-1 soft-grey lower ]">
-					<span class="white">Gobelins</span>.experiments
+				<h1 class="[ home__heading ] [ heading-1 soft-grey lower ft-reg ]">
+					<span class="white ft-alt-reg">CRMA</span>.experiments
 				</h1>
-				<h2 class="[ home__teasing ] [ teasing-1 soft-grey lower ]">
-					<span class="white">Three.js</span> creative coding workshop
+				<h2 class="[ home__teasing ] [ teasing-1 soft-grey ft-reg ]">
+					<span class="white ft-alt-reg">Three.js</span> creative coding workshop
 				</h2>
-				<a href="projects-list/" class="[ home__btn ] [ btn btn--25 btn--fill btn--white ]">View all projects</a>
+				<a href="projects-list/" class="[ home__btn ] [ btn btn--25 btn--fill btn--white ] [ ft-alt-reg ]">View all projects</a>
 			</div>
 		</div>
 	</div>
