--- a/src/views/sections/projects-list/projects-list.html
+++ b/src/views/sections/projects-list/projects-list.html
@@ -1,12 +1,12 @@
 <div class="projects-list">
 	<div class="container">
 		<div class="row">
-			<div class="four offset-by-two align-center">
-				<h3 class="[ projects-list__heading ] [ heading-2 soft-grey lower ]">
-					<span class="white">Gobelins</span>.experiments
+			<div class="[ four offset-by-two ] [ align-center ]">
+				<h3 class="[ projects-list__heading ] [ heading-2 soft-grey lower ft-reg ]">
+					<span class="white ft-alt-reg">CRMA</span>.experiments
 				</h3>
-				<h2 class="[ projects-list__teasing ] [ teasing-2 white ]">
-					Developers - CRMA Interactive Design '15
+				<h2 class="[ projects-list__teasing ] [ teasing-2 white ft-alt-reg ]">
+					Developers - Interactive Design '15
 				</h2>
 			</div>
 		</div>
