--- a/src/views/layout/footer/footer.html
+++ b/src/views/layout/footer/footer.html
@@ -1,4 +1,3 @@
-<!-- Workshop by <a href="http://guillaumegouessan.com"> Guillaume Gouessan </a> for <a href="http://gobelins.fr"> Gobelins School </a> CRMA 2015 students, Paris 2014. -->
-<a href="about" class="btn btn--info js-info-btn">
+<a href="about" class="[ btn btn--info ] [ js-info-btn ] [ ft-alt-reg ] [ lnk lnk--anim ]">
     i
 </a>
