Wording, and final !

--- a/src/views/sections/about/about.html
+++ b/src/views/sections/about/about.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="[ four offset-by-two ] [ align-center ft-reg ]">
                     <p class="soft-grey">We are all studying Interactive Design in <br /><a href="http://www.gobelins.fr" class="[ lnk lnk--anim ] [ white ]" target="_blank">Gobelins, L'école de l'image</a> located in Paris.</p>
-                    <p class="soft-grey">We did this on a 4 days workshop. So everything is not that clean.</p>
+                    <p class="soft-grey">We did this during a 4 days workshop, so we tried to do it as clean as we could.</p>
                 </div>
             </div>
             <div class="row">
