Hotfix visited link

--- a/src/views/components/nameButton/_nameButton.scss
+++ b/src/views/components/nameButton/_nameButton.scss
@@ -10,6 +10,12 @@
         // cursor: pointer;
     }
 
+    &:visited {
+        .name {
+            @extend .soft-grey;
+        }
+    }
+
     .name, .title {
         display: block;
         pointer-events:none;
